# Soter

./: .gitignore  COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_245.md  PR_DESCRIPTION.md  PR_LINK.md  README.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  TODO.md  VERIFICATION_METADATA_IMPLEMENTATION.md  b64_build.tmp  package-lock.json  package.json  pnpm-lock.yaml  tmp_ocr_inspect.ipynb
app/onchain/contracts/aid_escrow/: Cargo.toml  GAS_PROFILING_REPORT.md  README.md
app/onchain/contracts/aid_escrow/src/: lib.rs
app/onchain/contracts/aid_escrow/test_snapshots/: merkle_multi_leaf_claim_fails_for_non_member.1.json  merkle_multi_leaf_claim_fails_with_malformed_proof_hex.1.json  merkle_multi_leaf_claim_fails_with_proof_for_different_leaf.1.json  merkle_multi_leaf_claim_fails_with_tampered_sibling.1.json  merkle_multi_leaf_claim_succeeds_with_valid_proof.1.json  test_aggregates_all_cancelled.1.json  test_aggregates_all_claimed.1.json  test_aggregates_disburse_counts_as_claimed.1.json  test_aggregates_filters_by_token.1.json  test_aggregates_many_packages.1.json  test_aggregates_mixed_statuses.1.json  test_aggregates_revoke_then_refund.1.json  test_aggregates_single_created_package.1.json  test_aggregates_unknown_token.1.json  test_aggregates_update_after_transitions.1.json  test_batch_create_packages_success.1.json  test_batch_then_individual_no_id_collision.1.json  test_cancel_package_flow.1.json  test_config_constraints_on_extend_expiration.1.json  test_core_accounting_invariants.1.json  test_core_flow_fund_create_claim.1.json  (+32 more)
(+611 files in other folders)
