[package]
name = "aid_escrow"
version = "0.1.0"
edition = "2024"
description = "Soroban contract for aid package escrow functionality"
license = "MIT OR Apache-2.0"
authors = ["Soter Team"]
repository = "https://github.com/soter/aid-escrow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Build contracts for `wasm32` without pulling std into the SDK. Disable
# default features so the SDK compiles as no_std for wasm targets.
soroban-sdk = { workspace = true, default-features = false }

[dev-dependencies]
# `testutils` provides helper utilities for host-side testing and must not
# be enabled when compiling for the `wasm32` target. Move the dev-dependency
# into a target-specific table so it's only used for non-wasm builds.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Dev-only test utilities (host-side) — only enabled for non-wasm builds.
soroban-sdk = { workspace = true, default-features = false, features = ["testutils"] }
